working on registration
